[package]
name = "proxy_pingora"
version = "0.1.0"
authors = ["Etcetera <etetera3636@gmail.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/AmbitionsXXXV/proxy_pingora"
homepage = "https://github.com/AmbitionsXXXV/proxy_pingora"
description = "A proxy server for Pingora"
readme = "README.md"
categories = ["development-tools"]
keywords = []

[dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
argon2 = "0.5.3"
axum = "0.8.3"
chrono = { version = "0.4.40", features = ["serde"] }
dashmap = "6.1"
rand = "0.8.5"
serde_json = "1.0"
