[package]
name = "proxy_pingora"
version = "0.1.0"
authors = ["Etcetera <etetera3636@gmail.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/AmbitionsXXXV/proxy_pingora"
homepage = "https://github.com/AmbitionsXXXV/proxy_pingora"
description = "A proxy server for Pingora"
readme = "README.md"
categories = ["development-tools"]
keywords = []

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = { version = "0.8.3", features = ["http2"] }
http = "1.3.1"
pingora = { version = "0.4.0", features = ["lb", "rustls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
argon2 = "0.5.3"
axum = "0.8.3"
chrono = { version = "0.4.40", features = ["serde"] }
dashmap = "6.1"
rand = "0.8.5"
serde_json = "1.0.140"
tempfile = "3"
tower-http = { version = "0.6.2", features = ["trace"] }

[patch.crates-io]
sfv = { git = "https://github.com/undef1nd/sfv.git", tag = "v0.9.4" }
